# oxterm

./: .gitignore  Cargo.toml  README.md  \
data/: org.hitchhiker-linux.oxterm.desktop
src/: lib.rs  main.rs
src/about/: mod.rs
src/actions/: mod.rs
src/cli/: mod.rs
src/config/: cursor.rs  dynamic_title_style.rs  font.rs  general.rs  mod.rs  palette.rs  pallette.rs  scrollback.rs  tab_position.rs  text.rs
src/config/background/: gradient.rs  image.rs  mod.rs
src/font/: mod.rs
src/keys/: mod.rs
src/ox_window/: imp.rs  mod.rs  ox_window.ui
src/preferences/: imp.rs  mod.rs  preferences.ui
src/preferences/background_page/: background_page.ui  imp.rs  mod.rs
src/preferences/background_page/color_page/: color_page.ui  imp.rs  mod.rs
src/preferences/background_page/image_page/: image_page.ui  imp.rs  mod.rs
src/preferences/general_page/: general_page.ui  imp.rs  mod.rs
src/preferences/gradient_editor/: gradient_editor.ui  imp.rs  mod.rs
src/preferences/gradient_editor/stop_editor/: imp.rs  mod.rs  stop_editor.ui
src/preferences/palette_page/: imp.rs  mod.rs  palette_page.ui
src/preferences/text_page/: imp.rs  mod.rs  text_page.ui
src/tab/: imp.rs  mod.rs
src/tab_label/: imp.rs  mod.rs  tab_label.ui
xtask/: Cargo.toml
xtask/src/: main.rs
