[package]
name = "oxterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
fastrand = "1.7"
once_cell = "1.12"
ron = "0.7"
toml = "0.5"

[dependencies.gtk]
version = "0.4"
package = "gtk4"

[dependencies.rgba_simple]
version = "0.7"
features = ["gdk"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.vte]
version = "0.1"
package = "vte4"

[profile.release]
codegen-units = 1
lto = true
strip = true

